Fixed overflowing

--- a/minta.css
+++ b/minta.css
@@ -22,22 +22,19 @@
 [class*="col-"] {
     float: left;
     padding: 15px;
+    height: auto;
 }
 
 ul li{
     margin: 5px 0;
 }
 
-.col-4{
-    height: 300px;
+.suti {
+    height: 300px;  
 }
 
 .col-4 ol li{
     margin: 10px 0;
-}
-
-.col-4-suti{
-    height: 300px;
 }
 
 @media screen and (max-width: 1300px){
@@ -89,9 +86,6 @@ ul li{
 }
 
 @media screen and (max-width: 1500px){
-    .col-4{
-        height: 310px;
-    }
     .col-4-suti img{
         width: 100%;
     }
@@ -211,7 +205,7 @@ a{
 div.suti{
        padding: 5px;
        background-color: #FFAA00;
-       height:100%;
+       height:300px;
     margin: 0px;
    border-radius: 10px;
     text-align: justify;
